 * Channel names can now contain any amount of ANSI, as long as the visible
   name is 30 chars or less in length. Suggested by Kimiko Muffin. [MG]
 * @channel/rename allowed you to give channels invalid names. [MG]
 * @readcache rebuilds the linux file watch list, allowing deleted
   files to be watched for changes again when re-created. [SW]
 * Crash bug in @boot/me. Reported by Minion. [SW]

Functions:
 * isregexp() to validate regexp patterns. Suggested by Padraic. [DC]
 * sqlescape() doesn't need to have commas escaped. Suggested by Daniko
   and Padraic. [SW]
 
Commands:
 * 'examine' and 'brief' now take an /opaque switch, which omits contents
   listings. Useful for spammy objects like the player_start room. [MG]

Version 1.8.4 patchlevel 7                                 Sep 25, 2011

Deprecation:
 * @elock, @eunlock, @ulock and @uunlock are deprecated. [SW]
 * @doing is now deprecated (see below).
 * The "newline_one_char" mush.cnf option is now deprecated, and will soon
   always be "Yes". If you have it set to No and have any code that assumes
   strlen(%r) == 2, you should change it now. [MG]

Major changes:
 * DOING is now a standard attribute. Your @doing can be any length, and
   doing() returns the whole string (though it will still be truncated when
   displayed on WHO), can contain ANSI and will be evaluated each time it's 
   displayed, allowing for random/rotating doings. The @doing command will
   escape its input before setting into an attribute, for backwards
   compatability, but is now deprecated; use &doing to store code. [MG]
 * All objects with the same flags or powers set share the same
   storage for those flags. Large games should see slightly reduced memory
   use. Suggested by [GM]. [SW]

Minor changes:
 * Rewrite memcheck allocation tracking to use a more efficient data
   structure. [SW]
 * Help file improvements, by Ender and others. [SW] [MG]
 * Added a new 'getting started' helpfile, that gives a brief overview of